// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> correctly renders zero progress 1`] = `
<div
  class="progress-bar"
>
  <div
    class="percentage-bar-container"
  >
    <div
      aria-label="progress bar"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="percentage-bar"
      role="progressbar"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders with invalid value ("0") for progressComplete 1`] = `
<div
  class="progress-bar"
>
  <div
    class="percentage-bar-container"
  >
    <div
      aria-label="progress bar"
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="5"
      class="percentage-bar"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
</div>
`;
